--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -1,10 +1,11 @@
 [uwsgi]
-socket=127.0.0.1:8000
+socket=0.0.0.0:8000
 chdir=/project/summer
 wsgi-file=summer_backend/wsgi.py
 process=4   
 threads=2
-pidfile=/project/uwsgi.pid   
+pidfile=/project/uwsgi.pid
+daemonize =/project/uwsgi.log
 master=true 
 log-maxsize = 100000 
 max-requests = 1000
