--- a/.github/workflows/summer.yml
+++ b/.github/workflows/summer.yml
@@ -40,6 +40,8 @@ jobs:
             -e DB_PASSWORD=${{ secrets.DB_PASSWORD }} \
             -e DB_HOST=${{ secrets.DB_HOST }} \
             -e DB_PORT=${{ secrets.DB_PORT }} \
+            -e REDIS_HOST=${{ secrets.REDIS_HOST }} \
+            -e REDIS_PORT=${{ secrets.REDIS_PORT }} \
             -v /django/media:/project/summer/media \
             --name summer_backend --restart=unless-stopped \
             ${{ secrets.DOCKER_REPOSITORY }}
